--- a/package.json
+++ b/package.json
@@ -3,12 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.1",
+    "@material-ui/icons": "^4.9.1",
+    "@react-pdf/renderer": "^1.6.12",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@tronprotocol/wallet-api": "0.0.37",
+    "axios": "^0.21.0",
+    "bitcoinjs-lib": "^5.2.0",
+    "crypto-js": "^4.0.0",
+    "ethereumjs-wallet": "^1.0.1",
+    "notistack": "^1.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "socket.io-client": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
